# scry

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  config.json  install.sh  pyproject.toml  scry  scry-deepseek  scry-eval  scry-glm
.claude/skills/scry/: SKILL.md
.claude/skills/scry-plan/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
eval/: dataset.json  results.json
scry_web/: __init__.py  __main__.py  api.py  artifacts.py  attachments.py  engine.py  locations.py  paths.py  runs.py  server.py  state.py  store.py
scry_web/static/: api.js  app.js  index.html  markdown.js  styles.css  ui.js
tests/: README.md  _harness.py  markdown_render.mjs  smoke.sh  test_agent_file.py  test_call_cli.py  test_check.py  test_cli_e2e.py  test_config.py  test_consensus_map.py  test_deepseek_adapter.py  test_deepseek_env.py  test_dry_run.py  test_env_scrub.py  test_eval_async.py  test_eval_draco_parse.py  test_eval_grading.py  test_glm_adapter.py  test_glm_env.py  test_harness_selftest.py  test_init.py  test_install.py  test_json_extract.py  test_main_guard.py  test_misc_helpers.py  test_naming.py  test_orb.py  test_pipeline_helpers.py  test_plan.py  test_proc_cleanup.py  test_render_call.py  test_research.py  test_research_cli.py  test_research_run.py  test_runecircle.py  test_scry_run.py  test_stream_call.py  test_stream_extract.py  test_update.py  test_web_api.py  (+5 more)
(+12 files in other folders)
