[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scry"
version = "0.3.0"
description = "Local OpenRouter-Fusion-style multi-model synthesis over headless subscription CLIs — plus an optional local web UI."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Daniel Mandragona" }]

# The core `scry` CLI is a single, stdlib-only file with ZERO runtime dependencies.
# It is installed/updated via install.sh (a symlink or copy onto your PATH), not pip.
# Keep this list EMPTY — the zero-dependency invariant is load-bearing and tested.
dependencies = []

# The local web UI (`scry web`) is the only thing that needs third-party packages.
# They are lazy-imported solely inside the `web` subcommand, so the core CLI keeps
# working with none of these installed. install.sh installs this group by default.
[project.optional-dependencies]
web = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-multipart>=0.0.9",
]
# Extras used only by the web test suite (the tests skip cleanly when absent).
web-test = [
  "httpx>=0.27",
]

[tool.setuptools]
# scry_web is a real importable package; the static SPA ships vendored inside it so
# no Node/npm toolchain is needed to install or run the web UI.
packages = ["scry_web"]

[tool.setuptools.package-data]
scry_web = ["static/**/*", "static/*"]
